# structured-extractor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  interview-questions.md  lessons-learned.md
src/structured_extractor/: __init__.py  api.py  cli.py  config.py  errors.py  extractor.py  factory.py  schemas.py  usage.py
src/structured_extractor/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: conftest.py  test_api.py  test_extractor.py  test_usage.py
