[project]
name = "structured-extractor"
version = "0.1.0"
description = "Provider-agnostic structured data extraction from messy text using LLM tool use + schema-constrained output."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Arunops700" }]
dependencies = [
    "anthropic>=0.49",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
extract = "structured_extractor.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_extractor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "W"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
